Shifted timeline dot to correct positioning

--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -29,7 +29,7 @@
 
 .timeline-dot{
     position: absolute;
-    left: -1.875rem;
+    left: -1.65rem;
     top: 0;
     width: 1rem;
     height: 1rem;
